Fixed /portfolio hero layout shift from nav-cards. Fixes #69

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -196,3 +196,9 @@ p {
   cursor: zoom-out;
 }
 
+
+/*** ////////    BOOTSTRAP OVERIDES    //////// ***/
+
+.ratio-1x1 {
+  aspect-ratio: 1 !important;
+}
